# python-sdk

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  refresh-openapi.yml  release.yml
scripts/: generate_models.py  normalize_spec.py
src/goable_sdk/: __init__.py  _models.py  client.py  errors.py
tests/: test_client.py
